--- a/docs/ipmi2017/fmri_bib.bib
+++ b/docs/ipmi2017/fmri_bib.bib
@@ -10,6 +10,22 @@
   pages     = {e0158504},
   publisher = {Public Library of Science},
 }
+@article{amunts2007cytoarchitecture,
+  title={Cytoarchitecture of the cerebral cortex-more than localization},
+  author={Amunts, K and Schleicher, A and Zilles, K},
+  journal={Neuroimage},
+  volume={37},
+  number={4},
+  pages={1061--1065},
+  year={2007},
+  publisher={Elsevier}
+}
+@article{von1925cytoarchitectonics,
+  title={The cytoarchitectonics of the adult human cortex},
+  author={Von Economo, CB and Koskinas, GN},
+  journal={Vienna and Berlin: Julius Springer Verlag},
+  year={1925}
+}
 @article{sorkine2009least,
   title={Least-squares rigid motion using svd},
   author={Sorkine, Olga},
