--- a/docs/ipmi2017/fmri_bib.bib
+++ b/docs/ipmi2017/fmri_bib.bib
@@ -10,6 +10,16 @@
   pages     = {e0158504},
   publisher = {Public Library of Science},
 }
+@article{kuhn1955hungarian,
+  title={The Hungarian method for the assignment problem},
+  author={Kuhn, Harold W},
+  journal={Naval research logistics quarterly},
+  volume={2},
+  number={1-2},
+  pages={83--97},
+  year={1955},
+  publisher={Wiley Online Library}
+}
 @article{amunts2007cytoarchitecture,
   title={Cytoarchitecture of the cerebral cortex-more than localization},
   author={Amunts, K and Schleicher, A and Zilles, K},
