--- a/docs/ipmi2017/ipmi2017_brainsync_aaj.lyx
+++ b/docs/ipmi2017/ipmi2017_brainsync_aaj.lyx
@@ -912,6 +912,16 @@ For quantitation of the results, we computed adjusted Rand index between
  across subject similarity by averaging them across subjects and sessions
  respectively.
  This was applied to both individual parcellation as well as joint parcellation.
+ For visualization of the individual clustering results, we used Hungarian
+ algorithm
+\begin_inset CommandInset citation
+LatexCommand cite
+key "kuhn1955hungarian"
+
+\end_inset
+
+ for label reassignment.
+ For the joint clustering, there was no reassignment required.
 \end_layout
 
 \begin_layout Standard
@@ -924,7 +934,8 @@ For additional validation, we divided the group of 40 subjects into 2 groups
  We measured similarity of the two parcellations for the common subject
  when it is done jointly with two disjoint groups of subjects, using adjusted
  Rand index.
- 
+ For visualization of the two results, we used Hungarian algorithm for label
+ reassignment of the two clustering results.
 \end_layout
 
 \begin_layout Section
@@ -1020,7 +1031,6 @@ reference "sub:Comparison-to-connectivity"
 
 .
  For the random iid gaussian case, both the measured produced a large 
-
 \begin_inset Formula $L^{2}$
 \end_inset
 
@@ -1051,12 +1061,10 @@ reference "fig:Histograms-of-L2"
  It can be seen that in both cases, BrainSync is able to synchronize the
  data better yielding lower distances.
  
-\lang english
-
 \begin_inset Float figure
 wide false
 sideways false
-status collapsed
+status open
 
 \begin_layout Plain Layout
 \align center
@@ -1121,7 +1129,7 @@ reference "fig:Spatial maps of L2"
 \begin_inset Float figure
 wide false
 sideways false
-status collapsed
+status open
 
 \begin_layout Plain Layout
 \align center
@@ -1138,7 +1146,7 @@ status collapsed
 \begin_inset Caption
 
 \begin_layout Plain Layout
-Histograms of 
+Spatial map of 
 \begin_inset Formula $L^{2}$
 \end_inset
 
@@ -1165,13 +1173,30 @@ name "fig:Spatial maps of L2"
 \end_layout
 
 \begin_layout Subsection
-Quantifying Variability of rfMRI
+Quantifying variability of rfMRI
 \end_layout
 
 \begin_layout Standard
-Since BrainSync allows us to compare fMRI data across scans, we use it for
- quantifying variability in the fMRI resting state data across session as
- well as across subjects.
+The correlation maps produced after BrainSync (Fig.
+ 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "fig:Correlation-of-Resting"
+
+\end_inset
+
+) show the spatial map of regions where fmri signal is similar across subjects
+ and where it is dissimilar.
+ Across sessions, it can be seen that regions associated with the resting
+ state (precuneus, association cortex and middle frontal cortex) show high
+ correlation whereas areas associates with higher cognitive functions (medial
+ frontal cortex, insula and parts of the temporal lobe) show relatively
+ lower correlations.
+ Across subject correlations are significantly lower than within subject
+ correlation as expected.
+ In across subject rsfMRI comparison, again resting state network and sensori-mo
+tor cortex show high correlation, whereas higher cognitive areas show lower
+ correlation.
  
 \end_layout
 
@@ -1198,6 +1223,14 @@ status open
 \begin_layout Plain Layout
 Correlation of Resting State fMRI (a) across two sessions of subjects, averaged
  over subjects; (b) across subjects averaged over the two sessions.
+ 
+\begin_inset CommandInset label
+LatexCommand label
+name "fig:Correlation-of-Resting"
+
+\end_inset
+
+
 \end_layout
 
 \end_inset
@@ -1211,26 +1244,79 @@ Correlation of Resting State fMRI (a) across two sessions of subjects, averaged
 \end_layout
 
 \begin_layout Subsection
-Application to Joint Cortical Parcellation
+Application to joint cortical parcellation
 \end_layout
 
 \begin_layout Standard
-For the purpose of cortical parcellation, we used HCP data.
+We performed clustering of 40 subjects x 2 sessions each, bot individually
+ as well as jointly after synchronization using BrainSync.
+ It is noted that for individual clustering, we performed clustering separately
+ for 80 scans one at a time, whereas in joint clustering, we performed only
+ one clustering on all the pooled data of 80 scans.
+ A sample result for 2 of the brains is shown in Fig.
  
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "fig:Individual-Parcellation-of"
+
+\end_inset
+
+ for individual clustering and in Fig.
+ 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "fig:Joint-Parcellation-of"
+
+\end_inset
+
+ for joint clustering.
+ It can be seen in that the individual clustering are not similar (Fig.
+ 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "fig:Individual-Parcellation-of"
+
+\end_inset
+
+), even across sessions of the same subject.
+ This is because for a high number of clusters (
+\begin_inset Formula $k=100$
+\end_inset
+
+), the limited fMRI data for individual brains produces high variability
+ in the clustering.
+ It is noted that individual clustering method performs better for a low
+ number of clusters (
+\begin_inset Formula $k\approx30$
+\end_inset
+
+) The clustering results produced after synchronization of the pooled data
+ are much more coherent across sessions (Fig.
+ 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "fig:Joint-Parcellation-of"
+
+\end_inset
+
+).
+ They are also coherent across subjects, even though, we simply pooled their
+ data and did not enforce any prior.
+ This shows that the resting state signal in each of these brain region
+ is similar across subjects, and each region or network produces unique
+ signal.
+ A higher similarity across sessions was observed than across subjects as
+ measured by rand score (Table ) 
+\begin_inset Note Note
+status open
+
+\begin_layout Plain Layout
+add table here
 \end_layout
 
-\begin_layout Itemize
-Show how to concatenate data of 40 subjects.
-\end_layout
+\end_inset
 
-\begin_layout Itemize
-Because we have pooled a lot of data, we get good results.
- Purely data driven algorithm
-\end_layout
-
-\begin_layout Itemize
-In the first way, we are performing k-means clustering 40 times, while after
- brainsync we do k means only once on all the data at once.
+.
 \end_layout
 
 \begin_layout Standard
@@ -1254,7 +1340,14 @@ status open
 \begin_inset Caption
 
 \begin_layout Plain Layout
-Individual Parcellation of subjects done independently of each other
+Individual Parcellation of subjects done independently of each other 
+\begin_inset CommandInset label
+LatexCommand label
+name "fig:Individual-Parcellation-of"
+
+\end_inset
+
+
 \end_layout
 
 \end_inset
@@ -1288,8 +1381,10 @@ status open
 \begin_inset Caption
 
 \begin_layout Plain Layout
-Joint Parcellation of subjects with two sessions per subject
-\end_layout
+Joint Parcellation of subjects with two sessions per subject 
+\begin_inset CommandInset label
+LatexCommand label
+name "fig:Joint-Parcellation-of"
 
 \end_inset
 
@@ -1301,8 +1396,28 @@ Joint Parcellation of subjects with two sessions per subject
 
 \end_layout
 
-\begin_layout Itemize
-Table of ROI 40 subjects
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+The result of two separate joint parcellations of a single subject, when
+ it is placed in two disjoint group of 19 subjects is shown in Fig.
+ 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "fig:Joint-parcellation single subject in two groups"
+
+\end_inset
+
+.
+ The adjusted Rand index of ## was observed between the two parcellations.
+ It can be noted that there is a very close similarity in the clustering
+ result observed in several of the parcellations, even if the two parcellations
+ were obtained independently by placing the given subject with completely
+ disjoint groups of 19 subjects each.
+ This result shows the reproducibility of the parcellation.
 \end_layout
 
 \begin_layout Standard
@@ -1328,6 +1443,14 @@ status open
 \begin_layout Plain Layout
 Joint parcellation of one subject when placed in two different groups yields
  consistent parcellation.
+ 
+\begin_inset CommandInset label
+LatexCommand label
+name "fig:Joint-parcellation single subject in two groups"
+
+\end_inset
+
+
 \end_layout
 
 \end_inset
@@ -1345,9 +1468,22 @@ Discussion and Conclusion
 \end_layout
 
 \begin_layout Standard
-It is not feasible to directly pool the connectivity based measures without
- dimensionality reduction which will result in a loss of information.
- The connectivity based me
+We presented a method for synchronization of rsfMRI data across subjects
+ and scans allowing a direct comparison of rsfMRI data across scans.
+ Similar to the image registration, this temporal alignment performed using
+ BrainSync can facilitate cross-sectional and longitudinal studies of the
+ rsfMRI data with increased sensitivity and specificity.
+ The orthogonal transformation produced by BrainSync is invertible, perfectly
+ preserves the correlation structure of the original data and is therefore
+ lossless.
+ In addition to showing superior performance to the feature based techniques
+ such as functional connectivity, BrainSync also produces a low dimensional
+ feature and therefore allows pooling of the data across scans.
+ This makes application of powerful large data algorithms on fMRI feasible.
+ As shown in the rsfMRI variability analysis and in joint parcellation of
+ the cortex, availability of a large amount of synchronized data can facilitate
+ use of purely data driven techniques leading to reproducible results.
+ 
 \end_layout
 
 \begin_layout Standard
@@ -1357,19 +1493,13 @@ One of the assumptions is that the correlation structure of the brain images
  It is possible to develop a windowed version of BrainSync.
  We will also explore the extension of BrainSync in case of task data by
  using the timing information.
- 
-\end_layout
-
-\begin_layout Itemize
-For individual analysis, synchronization will not change the result since
- it retains the correlation structure.
- But synchronization allows us to do cross scan comparisons.
- 
-\end_layout
-
-\begin_layout Itemize
-This allows for concatenation of data across subjects and allows for group
- dynamics studies.
+ It is also possible to add weighting on synchronization if we are interesting
+ in only a subset of brain for a particular study, or sparcity prior if
+ we expect the brain networks to be sparse.
+ While it is possible to have additional assumptions and prior on the synchroniz
+ation method, in this work we have tried to keep the assumptions and prior
+ to the minimum and only exploit signal space geometry to get a powerful
+ new method that facilitates cross scan comparison of rsfMRI.
 \end_layout
 
 \begin_layout Standard
