--- a/docs/ipmi2017/fmri_bib.bib
+++ b/docs/ipmi2017/fmri_bib.bib
@@ -10,6 +10,25 @@
   pages     = {e0158504},
   publisher = {Public Library of Science},
 }
+@article{boutin2004reconstructing,
+  title={On reconstructing n-point configurations from the distribution of distances or areas},
+  author={Boutin, Mireille and Kemper, Gregor},
+  journal={Advances in Applied Mathematics},
+  volume={32},
+  number={4},
+  pages={709--735},
+  year={2004},
+  publisher={Elsevier}
+}
+@article{iraji2016connectivity,
+  title={The connectivity domain: Analyzing resting state fMRI data using feature-based data-driven and model-based methods},
+  author={Iraji, Armin and Calhoun, Vince D and Wiseman, Natalie M and Davoodi-Bojd, Esmaeil and Avanaki, Mohammad RN and Haacke, E Mark and Kou, Zhifeng},
+  journal={NeuroImage},
+  volume={134},
+  pages={494--507},
+  year={2016},
+  publisher={Elsevier}
+}
 @article{kuhn1955hungarian,
   title={The Hungarian method for the assignment problem},
   author={Kuhn, Harold W},
